<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flexbot</string>
    <string name="settings_title_connection">CONNECT TO FLEXBOT</string>
    <string name="settings_title_personal">PERSONAL SETTINGS</string>
    <string name="settings_title_video">VIDEO SETTINGS</string>
    <string name="settings_title_angel_trim">FLIGHT ANGLE TRIM</string>
    <string name="settings_title_mode">MODE SETTINGS</string>
    <string name="settings_title_about">ABOUT</string>

    <string name="btn_title_default_settings">Default Settings</string>
    <string name="btn_title_calibrate_acc">Calibrate Acc</string>
    <string name="btn_title_calibrate_mag">Calibrate Mag</string>
    <string name="btn_title_reset">RESET</string>
    <string name="btn_title_scan">Scan</string>
    <string name="btn_title_stop_scan">Stop Scanning</string>
    <string name="btn_title_scanning">Scanning</string>
    <string name="settings_item_connection_state_not_conneceted">Not connected</string>
    <string name="settings_item_connection_state_conneceted">Connected</string>

    <string name="settings_item_left_handed">Left Handed</string>
    <string name="settings_item_interface_opacity">Interface Opacity</string>
    <string name="settings_item_acc_mode">Acc Mode</string>
    <string name="settings_item_headfree_mode">Headfree Mode</string>
    <string name="settings_item_beginner_mode">Beginner Mode</string>
    <string name="settings_item_take_off_throttle">Take Off Throttle</string>
    <string name="settings_item_aileron_and_elevator_dead_band">Aileron/Elevator Dead Band</string>
    <string name="settings_item_rudder_dead_band">Rudder Dead Band</string>
    <string name="settings_item_stop_scan">Stop Scan</string>
    <string name="settings_item_scanning">Scanning</string>
    <string name="settings_item_scan">Scan</string>
    <string name="settings_item_not_connected">not connected</string>
    <string name="settings_item_connected">connected</string>
    <string name="settings_item_scanning_anyflite">Scanning for Flexbot...</string>
    <string name="ble_not_supported">BLE is not available on this device.</string>
    <string name="bluetooth_not_supported">Bluetooth is not available on this device.</string>

    <string name="dialog_title_info">info</string>
    <string name="dialog_connect">Connect to Flexbot?</string>
    <string name="dialog_disconnect">Disconnect from Flexbot?</string>
    <string name="dialog_calibrate_acc">Calibrate the accelerator of Flexbot?</string>
    <string name="dialog_calibrate_mag">Calibrate the magnetometer of Flexbot?</string>
    <string name="dialog_reset">Reset to default settings?</string>

    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">NO</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">CANCEL</string>

    <string name="connection_failed">Connection failed</string>
    <string name="connection_successful">Connection successful</string>
    <string name="connection_lost">Connection lost</string>


    <string name="beginner_mode_info">Current control mode is beginner mode, if you can control the Flexbot drone well, you can turn off beginner mode in the Mode Settings page.</string>
    <string name="disconnect_ble_info">Flexbot disconnected</string>
    <string name="btn_close">CLOSE</string>
    <string name="unknown">Unknown</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">0 fps</string>


    <!--LaunchActivity-->
    <string name="lunch_menue_title_about">ABOUT</string>
    <string name="lunch_menue_title_feedback">FEEDBACK</string>
    <string name="lunch_menue_title_help">HELP</string>
    <string name="lunch_menue_title_buy">BUY</string>
    <string name="lunch_menue_title_print">3D PRINTING</string>
    <string name="lunch_menue_title_photo">PHOTOS</string>
    <string name="lunch_menue_title_information">INFORMATION</string>
    <string name="lunch_feedback_submint">SUBMINT</string>
    <string name="lunch_information_title_not_fill">NOT FILL</string>
    <string name="lunch_information_title_name">NAME</string>
    <string name="lunch_information_title_email">EMAIL</string>
    <string name="lunch_information_title_area">AREA</string>
    <string name="lunch_information_title_constellation">CONSTELLATION</string>
    <string name="lunch_information_title_signature">SIGNATURE</string>
    <string name="lunch_information_title_quit">QUIT</string>
    <string name="lunch_information_title_gender">  GENDER</string>
    <string name="lunch_information_editor_save">Save</string>
    <string name="lunch_information_success">success</string>
    <string name="lunch_information_title_sign_in">SIGN IN</string>
    <string name="lunch_information_feedback_succeed">SUCCESS</string>
    <string name="lunch_information_feedback">Enter the message</string>
    <string name="lunch_information_userico">Change Avatar</string>
    <string name="lunch_information_logout_exit">Successful Exit</string>
    <!-- MainActivity -->
    <string name="str_main_record_fail">record start fail</string>

    <!-- playback activity -->
    <string name="label_Playback_Activity">Album</string>
    <string name="tv_Playback_Photos">Photos</string>
    <string name="tv_Playback_Videos">Videos</string>
    <string name="tv_Playback_BuiltinSdcard">Built-in SDCard</string>
    <string name="tv_Playback_ExternalSdcard">External SDCard</string>
    <string name="str_playback_notfindexcard">Can not find ex sdcard</string>
    <string name="str_playback_warning">WARNING</string>
    <string name="str_playback_deletephoto">Delete this photo?</string>
    <string name="str_playback_deletevideo">Delete this video?</string>
    <string name="str_playback_confirm">Confirm</string>
    <string name="str_playback_cancel">Cancel</string>

    <!--     sdcard video activity -->
    <string name="tv_sdcardvideo_title">Remote SDcard</string>

    <!-- ImagePager Activity -->
    <string name="str_imagepager_filename">File Name:</string>
    <string name="str_imagepager_filepath">File Path:</string>
    <string name="str_imagepager_time">Time:</string>
    <string name="str_imagepager_filesize">File Size:</string>
    <string name="str_imagepager_resolution">Resolution:</string>
    <string name="str_imagepager_filetype">File Type:</string>


    <!-- MainActivity -->
    <string name="tv_TakePhoto">Taking photo…</string>
    <string name="tv_Exposure">M</string>
    <string name="tv_Aperture">F5.6</string>
    <string name="tv_ShutterSpeed">1/40s</string>
    <string name="tv_ISO">ISO400</string>
    <string name="tv_SocketState">No Stream.</string>

    <!-- main_popupwindow -->
    <string name="tv_Pop_Title_ISO">ISO</string>
    <string name="tv_Pop_Title_WB">WB</string>
    <string name="tv_Pop_Title_AV">F</string>
    <string name="tv_Pop_Title_TV">Shutter Speed</string>

    <!-- GridView_AV_item.xml -->
    <string name="btn_Gridview_AV">4</string>

    <!-- GridView_TV_Item.xml -->
    <string name="btn_Gridview_TV">30</string>

    <!-- GridView_ISO_Item.xml -->
    <string name="btn_Gridview_ISO">100</string>

    <!-- LoadingActivity -->
    <string name="tv_Camera_Model">Model</string>
    <string name="edt_url">rtsp://123.123.123.1/live1.sdp</string>

    <!-- Gridview Activity -->
    <string name="gridview_name">Gallery</string>
    <string name="girdview_menu_device">Camera Photos</string>
    <string name="gridview_menu_local">Local Photos</string>

    <!-- Display Activity -->
    <string name="display_device_save">Save</string>
    <string name="display_local_delete">Delete</string>


    <!-- gridview photos item -->
    <string name="tv_Photo_Name">default.jpg</string>
    <string name="description_iv_change_cam">Change camera local or wifi cam</string>
    <string name="Iv_Pop_Selector">Listview selector in popup window</string>

</resources>