<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/left_menue_bg"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">

        <cc.flexbot.www.ui.CircleImageView
            android:id="@+id/image1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/head_portrait" />

        <LinearLayout
            android:id="@+id/linearLayout_login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/image1">

            <TextView
                android:id="@+id/login"
                android:layout_width="183dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/image1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/lunch_information_title_sign_in"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/framelayout_info"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/image1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/image1">
            <TextView
                android:id="@+id/username1"
                android:layout_width="183dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/image1"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/UserLocation1"
                android:layout_width="183dp"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:hint="@string/lunch_information_title_not_fill"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/UserIntroduction1"
                android:layout_width="183dp"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:hint="@string/lunch_information_title_not_fill"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="16dp" />
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/gallery_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:drawableLeft="@drawable/photoicon"
        android:paddingLeft="3dp"
        android:text="@string/lunch_menue_title_photo"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/print_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:drawableLeft="@drawable/printicon"
        android:text="@string/lunch_menue_title_print"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:drawableLeft="@drawable/buyicon"
        android:text="@string/lunch_menue_title_buy"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/help_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:drawableLeft="@drawable/helpicon"
        android:text="@string/lunch_menue_title_help"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/feedback_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:drawableLeft="@drawable/feedicon"
        android:text="@string/lunch_menue_title_feedback"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_weight="0.03"
        android:background="@drawable/listview_item_bg"
        android:text="@string/lunch_menue_title_about"
        android:textColor="@color/white" />


</LinearLayout>
