<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <View
        android:id="@+id/view1"
        android:layout_width="100dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/isBeginnerModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isLeftHandedCheckBox"
        android:layout_below="@+id/isLeftHandedCheckBox"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/settings_v_gap"
        android:button="@drawable/checkbox" />

    <TextView
        android:id="@+id/isBeginnerModeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/isBeginnerModeCheckBox"
        android:layout_gravity="center"
        android:layout_alignRight="@+id/isLeftHandedTitleTextView"
        android:text="@string/settings_item_beginner_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_indicator_text_size" />



    <CheckBox
        android:id="@+id/isLeftHandedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/view1"
        android:button="@drawable/checkbox" />

    <TextView
        android:id="@+id/isLeftHandedTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/isLeftHandedCheckBox"
        android:layout_toLeftOf="@+id/view1"
        android:text="@string/settings_item_left_handed"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_indicator_text_size" />




    <CheckBox
        android:id="@+id/isAccModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isBeginnerModeCheckBox"
        android:layout_below="@+id/isBeginnerModeCheckBox"
        android:layout_marginTop="@dimen/settings_v_gap"
        android:button="@drawable/checkbox" />

    <TextView
        android:id="@+id/isAccModeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_item_acc_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_indicator_text_size"
        android:layout_alignTop="@+id/isAccModeCheckBox"
        android:layout_alignEnd="@+id/isBeginnerModeTitleTextView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/isAccModeCheckBox"
        android:layout_marginTop="@dimen/settings_v_gap"
        android:id="@+id/relativeLayout2">

        <Button
            android:layout_width="88dp"
            android:layout_height="26dp"
            android:background="@drawable/btn_black"
            android:textSize="@dimen/settings_btn_text_size"
            android:textColor="@color/white"
            android:text="@string/btn_title_reset"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/magCalibrateBtn" />

            <Button
            android:id="@+id/magCalibrateBtn"
            android:layout_width="88dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:background="@drawable/btn_black"
            android:text="@string/btn_title_calibrate_mag"
            android:textColor="@color/white"
            android:textSize="@dimen/settings_btn_text_size" />

    </RelativeLayout>

     <ImageView
        android:id="@+id/prombtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/isBeginnerModeTitleTextView"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignTop="@+id/isBeginnerModeTitleTextView"
        android:src="@drawable/prombtn" />

    <ImageView
        android:id="@+id/prombtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/isAccModeTitleTextView"
        android:layout_alignLeft="@+id/prombtn1"
        android:layout_alignTop="@+id/isAccModeTitleTextView"
        android:src="@drawable/prombtn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/isBeginnerModeCheckBox"
        android:layout_alignStart="@+id/prombtn2"
        android:layout_above="@+id/prombtn2"
        android:layout_alignEnd="@+id/isBeginnerModeCheckBox" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignStart="@+id/prombtn2"
        android:layout_alignEnd="@+id/isAccModeCheckBox"
        android:layout_below="@+id/isAccModeCheckBox" />

</RelativeLayout>